Fix SonarQube S1075: Externalize hardcoded export directory path
- Add app.exports.dir property to application.properties
- Use constructor injection with @Value to inject configurable export directory
- Convert from File to Path APIs throughout exportProductData method
- Use toRealPath(), resolve(), normalize() for secure path validation
- Use Files.readString() with StandardCharsets.UTF_8 to avoid S1943
- Maintain all existing security validations (regex, traversal checks, etc.)

Co-Authored-By: mason.batchelor@cognition.ai <masonbatchelor81@gmail.com>